# unit-testing-01-catch2

./: .gitignore  .replit  CMakeLists.txt
src/: Administrative.cpp  Administrative.h  CMakeLists.txt  ISalary.cpp  ISalary.h  Person.cpp  Person.h  Professor.cpp  Professor.h  Student.cpp  Student.h  Temp.cpp  Temp.h  main.cpp
tst/: AdministrativeTest.cpp  CMakeLists.txt  ProfessorTest.cpp  main.cpp
